# TemplateAPI

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci-initial-commit.yml  ci-merge-develop.yml  ci-merge-master.yml  ci-release.yml  python-package.yml
app/: __init__.py  config.py  extensions.py
app/routes/: routes1.py
app/services/: auth.py
test/: test_app.py  test_endpoints.py
